chore(app): remove zonejs and upgrade angular to version 15

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <h1 class="f0-mktg">
-  {{ time$ | async | date: 'hh:mm' }}
+  {{ time$ | ngrxPush | date : 'hh:mm' }}
 </h1>
 
 <h2 class="f2-mktg">
-  {{ greeting$ | async }}
+  {{ greeting$ | ngrxPush }}
 </h2>
